# intellibus-kids

./: .env  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  requirements.txt
.github/workflows/: deploy.yml  terraform.yml
AI/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
AI/.cursor/rules/: file-structure.mdc  import-organization.mdc  langfuse-langchain.mdc  no-relative-imports.mdc  no_main_function.mdc  no_sanitize_message.mdc  projecct-vision.mdc  rules_location.mdc  spec-folder-location.mdc
AI/.spec/: app_flow.md  backend.md  file_structure.md  frontend.md  my_development_role.md  prd.md  tech_stack.md
AI/api/: __init__.py  main.py  patient_report.py
AI/api/routes/: main.py
AI/config/: __init__.py  llm_setup.py  logging_info.py  settings.py
AI/models/: llm.py  medical_report.py  readme.md  report.py  request_models.py
AI/services/: medical_report.py  readme.md  report_generation.py
BACKEND/: .gitignore  Dockerfile  render.yaml  requirements.txt
BACKEND/app/: __init__.py  config.py  main.py
BACKEND/app/db/: __init__.py  supabase.py
BACKEND/app/models/: __init__.py  requests.py  users.py
BACKEND/app/routers/: __init__.py  clerk.py  requests.py  routers.py  users.py
BACKEND/app/services/: __init__.py  clerk.py  requests.py  users.py
FRONTEND/: .gitignore  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
FRONTEND/src/: middleware.ts  types.ts
FRONTEND/src/app/: globals.css  layout.tsx  page.tsx
FRONTEND/src/app/actions/: user-management.ts
FRONTEND/src/app/doctor/: page copy.tsx  page.tsx
FRONTEND/src/app/patient/: page copy.tsx  page.tsx
FRONTEND/src/app/supabase-test/: page.tsx
FRONTEND/src/app/welcome/: layout.tsx  page.tsx
FRONTEND/src/components/: hero-section.tsx
FRONTEND/src/components/ui/: animated-hero.tsx  benefits-section.tsx  call-to-action.tsx  feature-section-with-bento-grid.tsx  glow.tsx  how-it-works-section.tsx  mockup.tsx  spinner.tsx  testimonials.tsx
FRONTEND/src/lib/: supabase.ts
FRONTEND/src/types/: globals.d.ts  ms.d.ts
INFRA/terraform/: backend.tf  main.tf  user_data.sh  variables.tf
RAGPIPELINE/: Dockerfile  config.py  requirements.txt
RAGPIPELINE/ingest/: article_watcher.py  pdf_loader.py
RAGPIPELINE/retrieval/: api.py  query_engine.py
src/app/: page.tsx
src/app/welcome/: page.tsx
(+21 files in other folders)
