[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intellibus-kids"
version = "0.1.0"
description = "AI healthcare assistant for patients with stomach issuse"
authors = [
    {name = "Intellibus_Devs"}
]
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "langchain",
    "langchain-google-genai",
    "langgraph",
    "pydantic",
    "python-dotenv",
    "pinecone-client",
    "langfuse",
    "fastapi",
    "uvicorn",
    "httpx",
    "starlette",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.0.270",
]

[tool.pytest.ini_options]
testpaths = [".spec"]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "B"]
ignore = []

[tool.setuptools]
packages = ["api", "config", "models", "services"] 